# soul-hunter-rs

./: BUILD_STATUS.md  COMPLETION_SUMMARY.md  Cargo.toml  FEATURES.md  MISSING.md  NEXT.md  README.md  STATUS.md
.dish/: workspace-id
.opencode/: context.md
crates/sh-agents/: Cargo.toml
crates/sh-agents/src/: crypto_agent.rs  dynamic_agent.rs  fuzzing_agent.rs  intent_agent.rs  lib.rs  network_agent.rs  orchestrator.rs  static_agent.rs
crates/sh-cli/: Cargo.toml
crates/sh-cli/src/: main.rs
crates/sh-cli/src/commands/: analyze.rs  assess.rs  dashboard.rs  llm.rs  mod.rs  report.rs  server.rs  skills.rs
crates/sh-cli/src/templates/: report.css
crates/sh-core/: Cargo.toml
crates/sh-core/src/: agent_manager.rs  attack_graph.rs  finding_normalizer.rs  lib.rs  orchestrator.rs  risk_calculator.rs  session_manager.rs  workflow.rs
crates/sh-dashboard/: Cargo.toml
crates/sh-dashboard/src/: dashboard_api.rs  error.rs  lib.rs  server.rs  server_main.rs  state.rs  web_main.rs  websocket.rs  websocket_server.rs
crates/sh-dashboard/src/components/: mod.rs  sidebar.rs
crates/sh-dashboard/src/static/: app.js  index.html  style.css
crates/sh-distributed/: Cargo.toml
crates/sh-distributed/src/: cicd.rs  coordinator.rs  error.rs  lib.rs  metrics.rs  nats.rs  redis.rs  worker.rs
crates/sh-event-bus/: Cargo.toml
crates/sh-event-bus/src/: bus.rs  handler.rs  lib.rs  subscriber.rs
crates/sh-evidence/: Cargo.toml
crates/sh-evidence/src/: chain.rs  hash.rs  lib.rs  signature.rs
crates/sh-executor/: Cargo.toml
crates/sh-executor/src/: error.rs  executor.rs  lib.rs  retry.rs  timeout.rs
crates/sh-finding/: Cargo.toml
crates/sh-finding/src/: correlation.rs  deduplication.rs  engine.rs  lib.rs
crates/sh-graph/: Cargo.toml
crates/sh-graph/src/: attack_surface.rs  error.rs  graph.rs  lib.rs  metrics.rs  path_analysis.rs  query.rs
crates/sh-llm/: Cargo.toml
crates/sh-llm/src/: error.rs  inference.rs  lib.rs  routing.rs  types.rs
crates/sh-llm/src/providers/: anthropic.rs  mod.rs  ollama.rs  openai.rs
crates/sh-orchestrator/: Cargo.toml  INTEGRATION.md
crates/sh-orchestrator/src/: circuit_breaker.rs  hooks.rs  lib.rs  memory_pool.rs  metrics.rs  mvcc.rs  orchestrator.rs  recovery.rs  session_pool.rs  util.rs  worksteal.rs
crates/sh-platform/: Cargo.toml
crates/sh-platform/src/: android.rs  ios.rs  iot.rs  lib.rs
crates/sh-policy/: Cargo.toml
crates/sh-policy/src/: engine.rs  error.rs  lib.rs  rego.rs  store.rs  wasm.rs
crates/sh-risk/: Cargo.toml
crates/sh-risk/src/: cvss.rs  engine.rs  lib.rs  ml_scoring.rs
crates/sh-scheduler/: Cargo.toml
crates/sh-scheduler/src/: lib.rs  priority_queue.rs  scheduler.rs
crates/sh-skills/: Cargo.toml
crates/sh-skills/src/: attack_surface.rs  correlation.rs  crypto_analysis.rs  dynamic_analysis.rs  error.rs  intent_analysis.rs  lib.rs  network_analysis.rs  owasp_top10.rs  risk_context.rs  static_analysis.rs
crates/sh-tools/: Cargo.toml
crates/sh-tools/src/: apk_parser.rs  lib.rs
crates/sh-tools/src/apk/: manifest.rs  mod.rs  parser.rs
crates/sh-tools/src/network/: mod.rs
crates/sh-tools/src/secrets/: mod.rs
crates/sh-types/: Cargo.toml
crates/sh-types/src/: agent.rs  assessment.rs  event.rs  finding.rs  job.rs  lib.rs  policy.rs  risk.rs
crates/sh-wasm/: Cargo.toml
crates/sh-wasm/src/: error.rs  lib.rs  runtime.rs  sandbox.rs
crates/sh-worker/: Cargo.toml
crates/sh-worker/src/: error.rs  lib.rs  pool.rs  worker.rs
docs/: FINAL_BUILD_REPORT.md  FINAL_SUMMARY.md
docs/plans/: sh-skills-implementation-plan.md
src/: main.rs
tests/: integration_test.rs
