[package]
name = "sh-agents"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Security analysis agents for Soul Hunter RS"

[dependencies]
# Internal dependencies
sh-types = { workspace = true }
sh-tools = { workspace = true }
sh-llm = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Tracing
tracing = { workspace = true }

# Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Collections
dashmap = { workspace = true }

# Pattern matching
regex = { version = "1.10" }

# Random number generation for mutations
fastrand = { version = "2.0" }

# Directory traversal
walkdir = { version = "2.4" }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3.9"
