[package]
name = "sh-event-bus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Event bus system for Soul Hunter RS"

[dependencies]
sh-types = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Tracing
tracing = { workspace = true }

# Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Collections
dashmap = { workspace = true }

# Async utilities
futures = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
