[package]
name = "sh-orchestrator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Advanced orchestration engine with MVCC state sync, work-stealing queues, hook system, and autonomous recovery for Soul Hunter RS"

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["rt", "sync", "time", "macros"] }
async-trait = { workspace = true }
futures = { workspace = true }
futures-intrusive = "0.5"  # For intrusive collections

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Collections
dashmap = { workspace = true }
hashbrown = "0.14"  # Faster hash maps
indexmap = "2.1"    # Indexed maps for deterministic ordering

# Concurrency
parking_lot = "0.12" # Faster mutexes
crossbeam = "0.8" # lock-free data structures

# Memory
memoffset = "0.9"    # For intrusive collections
generational-arena = "0.2"  # Arena allocation

# Internal dependencies (using paths for simplicity in workspace)
sh-types = { path = "../sh-types" }
sh-event-bus = { path = "../sh-event-bus" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tracing-subscriber = { workspace = true }
tempfile = "3.9"
proptest = "1.3"  # Property testing

[features]
default = []
# Feature flags
mvcc = []  # Multi-version concurrency control
worksteal = []  # Work-stealing queues
hooks = []  # Hook system
session-pool = []  # Session pool
memory-pool = []  # Memory pooling
circuit-breaker = []  # Circuit breaker
recovery = []  # Autonomous recovery
full = ["mvcc", "worksteal", "hooks", "session-pool", "memory-pool", "circuit-breaker", "recovery"]
