[package]
name = "sh-policy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Policy enforcement engine for Soul Hunter RS - WASM and Rego support"

[dependencies]
# Core dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Collections
dashmap = { workspace = true }

# HTTP client for OPA server
reqwest = { workspace = true }

# WASM runtime
wasmtime = { version = "35.0", features = ["cranelift"] }

# Internal dependencies
sh-types = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"

[features]
default = ["wasm", "rego"]
wasm = []
rego = []
