[package]
name = "sh-skills"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Security analysis skills for Soul Hunter RS"

[dependencies]
# Internal dependencies
sh-types = { workspace = true }
sh-tools = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Tracing
tracing = { workspace = true }

# Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Collections
dashmap = { workspace = true }

# Pattern matching (needed for static analysis)
regex = { version = "1.10" }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3.9"
