[package]
name = "sh-worker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Worker pool management for Soul Hunter RS - async job execution with health monitoring and dynamic scaling"

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Tracing
tracing = { workspace = true }

# Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Collections
dashmap = { workspace = true }

# Internal dependencies
sh-types = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { workspace = true }
